# random-forest-classifier-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main_mpi.cpp  rand_forest.cpp  results  test.cpp  times.txt
include/: Dataset.h  DecisionTreeClassifier.h  FeatureSampler.h  Logger.hpp  RandomForestClassifier.h  Timer.h  TrainMatrix.hpp  radix_sort_indices.h  utils.h
include/Eigen/: Core
include/Eigen/src/OrderingMethods/: Ordering.h
include/predictionFF/: FarmFF.hpp  PipelineFF.hpp
include/splitters/: BaseSplitter.hpp  HistogramSplitter.hpp  SequentialSplitter.hpp  SplitterFF.hpp  SplitterMP.hpp
scripts/: heatmap.sh  strong_scaling.sh  weak_scaling.sh
src/: Dataset.cpp  DecisionTreeClassifier.cpp  RandomForestClassifier.cpp  Timer.cpp
